[package]
name = "simple_p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.6"
ordered-float = "5.0.0"
transitive = "1.1.0"
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git" ,features=["serde"]}
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.140"
secp256k1 = "0.30.0"


[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.8"

[workspace]
resolver = "2"
members = [ "example_client","examples_async"]
