[package]
name = "simple_p2p"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.6"
ordered-float = "5.0.0"
transitive = "1.1.0"
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git" ,features=["serde"]}
serde = {version = "1.0.219", features=["derive"]}
serde_json = "1.0.140"
secp256k1 = "0.30.0"
tarpc = {version="0.36.0",features=["tokio1"]}
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0"
futures = "0.3"
capnp-rpc = "0.20.0"
capnp = "0.21.0"
capnpc = "0.21"

[dev-dependencies]
rand = "0.8.5"
sha2 = "0.10.8"

[workspace]
resolver = "2"
members = ["example_client","examples_async","example_1","example_2","example_3", "example_4", "autonat_server", "relay", "relay_test_client", "flood_sub", "remove"]
