[package]
name = "autonat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = {version="4.5.39",features=["derive"]}
futures = "0.3.31"
libp2p = {version = "0.55.0",features = ["dns","tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic","kad","identify","autonat"]}
rand="0.8.5"
tokio = {version="1.45.0",features = ["full"] }
tracing-subscriber = {version="0.3.19",features = ["env-filter"]}


