[package]
name = "example_5"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
libp2p = {version = "0.55.0",features = ["dns","floodsub","tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic","kad","identify","ping","autonat"]}
tokio = {version="1.45.0",features = ["full"] }
tracing-subscriber = {version="0.3.19",features = ["env-filter"]}
