[package]
name = "iroh-holepunch"
version = "0.1.0"
edition = "2024"

[lib]
name = "iroh_holepunch"
path = "src/lib.rs"

[dependencies]
iroh = "1.0"
anyhow = "1.0"
clap = { version = "4.5.6", features = ["derive"] }
futures-lite = "2"
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
