[package]
name = "iroh-tor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Custom-transport support is gated behind this (experimental) feature flag.
iroh = { version = "1.0", features = ["unstable-custom-transports"] }
# Experimental n0 crate: routes iroh packets over a Tor hidden service and
# derives the peer's `.onion` address from its `EndpointId`. Not yet on
# crates.io, so it is pulled in (pinned) from git.
iroh-tor-transport = { git = "https://github.com/n0-computer/iroh-tor-transport", rev = "55b19c567f63e265d206f5a40369ab9597ce602e" }
anyhow = "1.0"
clap = { version = "4.5.6", features = ["derive"] }
data-encoding = "2"
tokio = { version = "1.50.0", features = ["full"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
