[package]
name = "trace_test"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.20.0", features = ["full"] }
tracing-attributes = "0.1.28"
hex = "0.4.3"
num-bigint = "0.4.6"
ordered-float = "5.0.0"
transitive = "1.1.0"
bitcoin = { git = "https://github.com/braidpool/rust-bitcoin.git"}
secp256k1 = "0.30.0"
